--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "express": "^4.18.2",
       "http": "^0.0.1-security",
       "mysql": "^2.18.1",
+      "mysql2": "^3.1.0",
       "node-cron": "^3.0.2",
       "qrcode": "^1.5.1",
       "qrcode-terminal": "^0.12.0",
