--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
    "license": "ISC",
    "description": "",
    "dependencies": {
+      "date-and-time": "^2.4.2",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "http": "^0.0.1-security",
