--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "qrcode": "^1.5.1",
       "qrcode-terminal": "^0.12.0",
       "socket.io": "^4.5.4",
-      "whatsapp-web.js": "^1.19.2"
+      "whatsapp-web.js": "^1.19.2",
+      "wwebjs-mongo": "^1.1.0"
    }
 }
