--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "http": "^0.0.1-security",
+      "mongoose": "^6.9.1",
       "mysql": "^2.18.1",
       "mysql2": "^3.1.0",
       "node-cron": "^3.0.2",
