--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "http": "^0.0.1-security",
-      "mongoose": "^6.9.1",
       "mysql": "^2.18.1",
       "mysql2": "^3.1.0",
       "node-cron": "^3.0.2",
       "qrcode": "^1.5.1",
       "qrcode-terminal": "^0.12.0",
       "socket.io": "^4.5.4",
-      "whatsapp-web.js": "^1.19.2",
-      "wwebjs-mongo": "^1.1.0"
+      "whatsapp-web.js": "^1.19.2"
    },
    "devDependencies": {
       "eslint": "^8.40.0"
