--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
       "qrcode": "^1.5.1",
       "qrcode-terminal": "^0.12.0",
       "socket.io": "^4.5.4",
-      "whatsapp-web.js": "^1.19.2"
+      "whatsapp-web.js": "https://github.com/Julzk/whatsapp-web.js/tarball/jkr_hotfix_7"
    },
    "devDependencies": {
       "eslint": "^8.40.0"
